# cmake

./: CMakeLists.txt
docs/: CMakeLists.txt
src/: CMakeLists.txt
src/math/: CMakeLists.txt
